Bug 71906 - [BDW] *ERROR* mismatch in ips_enabled (expected 1, found 0)
Summary: [BDW] *ERROR* mismatch in ips_enabled (expected 1, found 0)
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: high normal
Assignee: Paulo Zanoni
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-22 06:14 UTC by lu hua
Modified: 2017-10-06 14:41 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg (89.33 KB, text/plain)
2013-11-22 06:14 UTC, lu hua
no flags Details
Fix (2.65 KB, patch)
2013-12-02 09:50 UTC, Ville Syrjala
no flags Details | Splinter Review
Additional debug patch (2.96 KB, patch)
2013-12-04 10:46 UTC, Ville Syrjala
no flags Details | Splinter Review
kms_flip dmesg (125.30 KB, text/plain)
2013-12-17 03:37 UTC, lu hua
no flags Details

Description lu hua 2013-11-22 06:14:41 UTC
Created attachment 89619 [details]
dmesg

System Environment:
--------------------------
Platform: BDW
kernel: (drm-intel-next-queued) f671d117bc0338b67b0a7485882d332fe6c4b570

Bug detailed description:
-------------------------
Clean boot system, call trace appears in dmesg.

Call trace:
[    7.198745] ------------[ cut here ]------------
[    7.198790] WARNING: CPU: 0 PID: 1240 at drivers/gpu/drm/i915/intel_display.c:9438 check_crtc_state+0x7e8/0x839 [i915]()
[    7.198791] pipe state doesn't match!
[    7.198800] Modules linked in: i915(+) drm_kms_helper drm video button
[    7.198804] CPU: 0 PID: 1240 Comm: systemd-udevd Not tainted 3.12.0_drm-intel-next-queued_f671d1_20131121+ #5
[    7.198806] Hardware name: Intel Corporation Broadwell Client platform/SawTooth Peak, BIOS BDW-E1R1.86C.0050.R02.1311180920 11/18/2013
[    7.198813]  0000000000000009 ffff880147061028 ffffffff817f4ee7 0000000000000006
[    7.198818]  ffff880147061078 ffff880147061068 ffffffff81039ce8 ffff880147061070
[    7.198822]  ffffffffa009c326 ffff880147276000 ffff88014996d000 ffff88014996d660
[    7.198824] Call Trace:
[    7.198831]  [<ffffffff817f4ee7>] dump_stack+0x46/0x58
[    7.198839]  [<ffffffff81039ce8>] warn_slowpath_common+0x81/0x9b
[    7.198872]  [<ffffffffa009c326>] ? check_crtc_state+0x7e8/0x839 [i915]
[    7.198876]  [<ffffffff81039da5>] warn_slowpath_fmt+0x46/0x48
[    7.198901]  [<ffffffffa009c326>] check_crtc_state+0x7e8/0x839 [i915]
[    7.198934]  [<ffffffffa00a763d>] intel_modeset_check_state+0x35c/0x61a [i915]
[    7.198961]  [<ffffffffa00a7920>] intel_set_mode+0x25/0x2f [i915]
[    7.198986]  [<ffffffffa00a7f4c>] intel_crtc_set_config+0x622/0x824 [i915]
[    7.199005]  [<ffffffffa001bb65>] drm_mode_set_config_internal+0x56/0xce [drm]
[    7.199011]  [<ffffffffa0065ae3>] drm_fb_helper_set_par+0x5e/0xa7 [drm_kms_helper]
[    7.199017]  [<ffffffff813a47c5>] fbcon_init+0x320/0x41d
[    7.199023]  [<ffffffff813f83a2>] visual_init+0xbc/0x112
[    7.199028]  [<ffffffff813f9dad>] do_bind_con_driver+0x1b4/0x2db
[    7.199034]  [<ffffffff813fa015>] do_take_over_console+0x141/0x171
[    7.199038]  [<ffffffff813a3e26>] do_fbcon_takeover+0x5b/0x9d
[    7.199042]  [<ffffffff813a7174>] fbcon_event_notify+0x2c7/0x5f0
[    7.199049]  [<ffffffff817ff85c>] notifier_call_chain+0x37/0x61
[    7.199055]  [<ffffffff8105c39a>] __blocking_notifier_call_chain+0x46/0x5f
[    7.199060]  [<ffffffff8105c3c7>] blocking_notifier_call_chain+0x14/0x16
[    7.199065]  [<ffffffff813996f7>] fb_notifier_call_chain+0x1b/0x1d
[    7.199070]  [<ffffffff8139b495>] register_framebuffer+0x237/0x2a0
[    7.199076]  [<ffffffffa00659d3>] drm_fb_helper_initial_config+0x393/0x445 [drm_kms_helper]
[    7.199081]  [<ffffffff81091583>] ? mark_held_locks+0xce/0xfa
[    7.199088]  [<ffffffff817fbf50>] ? _raw_spin_unlock_irqrestore+0x3f/0x46
[    7.199092]  [<ffffffff810916f1>] ? trace_hardirqs_on_caller+0x142/0x19e
[    7.199135]  [<ffffffffa00db728>] intel_fbdev_initial_config+0x21/0x23 [i915]
[    7.199162]  [<ffffffffa0073813>] i915_driver_load+0xc17/0xe70 [i915]
[    7.199170]  [<ffffffff814162b1>] ? device_create+0x31/0x33
[    7.199185]  [<ffffffffa00163e6>] drm_dev_register+0x103/0x1b7 [drm]
[    7.199200]  [<ffffffffa0017ee7>] drm_get_pci_dev+0xa5/0x12f [drm]
[    7.199205]  [<ffffffff8141885f>] ? driver_probe_device+0x1a3/0x1a3
[    7.199230]  [<ffffffffa00704a5>] i915_pci_probe+0x45/0x4e [i915]
[    7.199237]  [<ffffffff81389d62>] local_pci_probe+0x20/0x32
[    7.199242]  [<ffffffff8138a800>] pci_device_probe+0xbf/0xe5
[    7.199247]  [<ffffffff81418752>] driver_probe_device+0x96/0x1a3
[    7.199251]  [<ffffffff814188c1>] __driver_attach+0x62/0x85
[    7.199255]  [<ffffffff81416c20>] bus_for_each_dev+0x5f/0x91
[    7.199258]  [<ffffffff814182d4>] driver_attach+0x1e/0x20
[    7.199262]  [<ffffffff81417e7d>] bus_add_driver+0xf9/0x245
[    7.199266]  [<ffffffff81418eb0>] driver_register+0x8c/0xc3
[    7.199271]  [<ffffffff8138a8f4>] __pci_register_driver+0x61/0x65
[    7.199274]  [<ffffffffa011e000>] ? 0xffffffffa011dfff
[    7.199287]  [<ffffffffa0017ffc>] drm_pci_init+0x8b/0xf1 [drm]
[    7.199290]  [<ffffffffa011e000>] ? 0xffffffffa011dfff
[    7.199318]  [<ffffffffa011e06a>] i915_init+0x6a/0x6c [i915]
[    7.199324]  [<ffffffff81000271>] do_one_initcall+0x84/0x10f
[    7.199330]  [<ffffffff8105c3a5>] ? __blocking_notifier_call_chain+0x51/0x5f
[    7.199337]  [<ffffffff8109b27d>] load_module+0x1adc/0x1de3
[    7.199340]  [<ffffffff81098890>] ? __unlink_module+0x25/0x25
[    7.199347]  [<ffffffff81126cd4>] ? vfs_read+0x108/0x153
[    7.199353]  [<ffffffff8109b695>] SyS_finit_module+0x5b/0x71
[    7.199359]  [<ffffffff81803292>] system_call_fastpath+0x16/0x1b
[    7.199361] ---[ end trace fe31a29218d6d448 ]---
Comment 1 lu hua 2013-11-22 06:20:07 UTC
ERROR:
[    7.198743] [drm:intel_pipe_config_compare] *ERROR* mismatch in ips_enabled (expected 1, found 0)
Comment 2 Ville Syrjala 2013-12-02 09:50:54 UTC
Created attachment 90096 [details] [review]
Fix

This patch should fix the warning. Let me know if it works.
Comment 3 lu hua 2013-12-04 07:00:42 UTC
(In reply to comment #2)
> Created attachment 90096 [details] [review] [review]
> Fix
> 
> This patch should fix the warning. Let me know if it works.

Test this patch, It still exists.
Comment 4 Ville Syrjala 2013-12-04 10:46:45 UTC
Created attachment 90215 [details] [review]
Additional debug patch

How odd. Please apply also this debug patch and attach a full dmesg w/ drm.debug=0xe.
Comment 5 lu hua 2013-12-05 06:13:26 UTC
(In reply to comment #4)
> Created attachment 90215 [details] [review] [review]
> Additional debug patch
> 
> How odd. Please apply also this debug patch and attach a full dmesg w/
> drm.debug=0xe.

Patch fail.
Hunk #1 FAILED at 3407.
Hunk #2 succeeded at 3444 (offset 5 lines).
Hunk #3 FAILED at 6991.
Hunk #4 succeeded at 9624 (offset -5 lines).
Comment 6 lu hua 2013-12-17 03:37:16 UTC
Created attachment 90855 [details]
kms_flip dmesg

This ERROR impact all kms_flip subcases.
Run kms_flip subcase, this error appears.

Run following steps:
dmesg -c
./kms_flip --run-subtest plain-flip-ts-check

output:
IGT-Version: 1.5-g1653106 (x86_64) (Linux: 3.13.0-rc3_drm-intel-nightly_22dd82_20131216+ x86_64)
Using monotonic timestamps
Beginning plain-flip-ts-check on crtc 3, connector 10
  1920x1080 60 1920 1966 1996 2080 1080 1082 1086 1112 0xa 0x48 138780
.........................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................
plain-flip-ts-check on crtc 3, connector 10: PASSED

Beginning plain-flip-ts-check on crtc 5, connector 10
  1920x1080 60 1920 1966 1996 2080 1080 1082 1086 1112 0xa 0x48 138780
.........................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................
plain-flip-ts-check on crtc 5, connector 10: PASSED

Beginning plain-flip-ts-check on crtc 7, connector 10
  1920x1080 60 1920 1966 1996 2080 1080 1082 1086 1112 0xa 0x48 138780
.........................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................
plain-flip-ts-check on crtc 7, connector 10: PASSED

Subtest plain-flip-ts-check: SUCCESS
Comment 7 Gordon Jin 2013-12-20 04:54:28 UTC
increasing priority, as it impacts passrate much (with all kms_flip subcases.)
Comment 8 Ben Widawsky 2013-12-23 20:33:43 UTC
Assigning to Paulo. This *shouldn't* effect pass rate, but I understand that is a larger conversation.
Comment 9 lu hua 2013-12-26 07:52:14 UTC
run  ./testdisplay, It also fails with this error.

output:
CRTC(3):[0]  1920x1080 60 1920 1966 1996 2080 1080 1082 1086 1112 0xa 0x48 138780
CRTC(3):[1]  1920x1080 40 1920 1966 1996 2080 1080 1082 1086 1112 0xa 0x40 92520

dmesg
[ 2110.408042] [drm:intel_pipe_config_compare] *ERROR* mismatch in ips_enabled (expected 1, found 0)
[ 2110.408049] ------------[ cut here ]------------
[ 2110.408078] WARNING: CPU: 0 PID: 11995 at drivers/gpu/drm/i915/intel_display.c:9498 check_crtc_state+0x7fd/0x844 [i915]()
[ 2110.408081] pipe state doesn't match!
[ 2110.408083] Modules linked in: tcp_lp bnep bluetooth rfkill ip6table_filter ip6_tables iptable_filter ip_tables ebtable_nat ebtables x_tables ipv6 dm_mod iTCO_wdt iTCO_vendor_support pcspkr i2c_i801 lpc_ich mfd_core snd_hda_intel snd_hda_codec snd_hwdep snd_pcm snd_page_alloc snd_timer snd soundcore battery ac acpi_cpufreq joydev i915 video button drm_kms_helper drm
[ 2110.408116] CPU: 0 PID: 11995 Comm: testdisplay Tainted: G        W    3.13.0-rc4_drm-intel-nightly_5f7867_20131226+ #10
[ 2110.408119]  0000000000000000 0000000000000009 ffffffff81711fd2 ffff88009ffad8b8
[ 2110.408123]  ffffffff8103312a ffff88009ffad8b0 ffffffffa007fc96 0000000000000018
[ 2110.408127]  ffff88014a384000 ffff880002da1000 ffff88009ffad948 ffff88014a3846e0
[ 2110.408132] Call Trace:
[ 2110.408141]  [<ffffffff81711fd2>] ? dump_stack+0x41/0x51
[ 2110.408149]  [<ffffffff8103312a>] ? warn_slowpath_common+0x73/0x8b
[ 2110.408165]  [<ffffffffa007fc96>] ? check_crtc_state+0x7fd/0x844 [i915]
[ 2110.408171]  [<ffffffff810331da>] ? warn_slowpath_fmt+0x45/0x4a
[ 2110.408189]  [<ffffffffa00937fa>] ? intel_ddi_get_config+0xd5/0x12b [i915]
[ 2110.408203]  [<ffffffffa007fc96>] ? check_crtc_state+0x7fd/0x844 [i915]
[ 2110.408222]  [<ffffffffa008a7de>] ? intel_modeset_check_state+0x359/0x601 [i915]
[ 2110.408236]  [<ffffffffa008aaa3>] ? intel_set_mode+0x1d/0x27 [i915]
[ 2110.408250]  [<ffffffffa008b0b1>] ? intel_crtc_set_config+0x604/0x7fe [i915]
[ 2110.408266]  [<ffffffffa000c9c2>] ? drm_mode_set_config_internal+0x44/0xac [drm]
[ 2110.408278]  [<ffffffffa000eacc>] ? drm_mode_setcrtc+0x3ea/0x49a [drm]
[ 2110.408289]  [<ffffffffa0002f37>] ? drm_ioctl+0x263/0x385 [drm]
[ 2110.408296]  [<ffffffff8134ed5d>] ? pty_write+0x44/0x4e
[ 2110.408305]  [<ffffffffa000e6e2>] ? drm_mode_setplane+0x317/0x317 [drm]
[ 2110.408311]  [<ffffffff810e90e8>] ? do_vfs_ioctl+0x3f1/0x43a
[ 2110.408316]  [<ffffffff810e917f>] ? SyS_ioctl+0x4e/0x7b
[ 2110.408321]  [<ffffffff8171c5e2>] ? system_call_fastpath+0x16/0x1b
[ 2110.408324] ---[ end trace 87c2d7e24610bbad ]---
Comment 10 lu hua 2013-12-26 08:19:21 UTC
kms_cursor_crc and kms_pipe_crc_basic also fail with this error.

run ./kms_cursor_crc --run-subtest cursor-black-invisible-offscreen  

output                                                                                          IGT-Version: 1.5-g72fe2b6 (x86_64) (Linux: 3.13.0-rc4_drm-intel-nightly_5f7867_20131226+ x86_64)
Beginning cursor-black-invisible-offscreen on crtc 3, connector 10
....................................................
cursor-black-invisible-offscreen on crtc 3, connector 10: PASSED

Beginning cursor-black-invisible-offscreen on crtc 5, connector 10
....................................................
cursor-black-invisible-offscreen on crtc 5, connector 10: PASSED

Beginning cursor-black-invisible-offscreen on crtc 7, connector 10
....................................................
cursor-black-invisible-offscreen on crtc 7, connector 10: PASSED

Subtest cursor-black-invisible-offscreen: SUCCESS

dmesg:
[  802.005840] [drm:intel_pipe_config_compare] *ERROR* mismatch in ips_enabled (expected 1, found 0)
[  802.005841] ------------[ cut here ]------------
[  802.005866] WARNING: CPU: 0 PID: 3817 at drivers/gpu/drm/i915/intel_display.c:9498 check_crtc_state+0x7fd/0x844 [i915]()
[  802.005866] pipe state doesn't match!
[  802.005878] Modules linked in: dm_mod pcspkr lpc_ich i2c_i801 snd_hda_intel mfd_core snd_hda_codec snd_hwdep snd_pcm snd_page_alloc snd_timer snd soundcore battery ac acpi_cpufreq joydev i915 video button drm_kms_helper drm
[  802.005883] CPU: 0 PID: 3817 Comm: kms_cursor_crc Tainted: G        W    3.13.0-rc4_drm-intel-nightly_5f7867_20131226+ #10
[  802.005887]  0000000000000000 0000000000000009 ffffffff81711fd2 ffff88009de396b8
[  802.005890]  ffffffff8103312a ffff88009de396b0 ffffffffa007fc96 0000000000000018
[  802.005892]  ffff880149f66000 ffff880145b08000 ffff88009de39748 ffff880149f666e0
[  802.005893] Call Trace:
[  802.005901]  [<ffffffff81711fd2>] ? dump_stack+0x41/0x51
[  802.005907]  [<ffffffff8103312a>] ? warn_slowpath_common+0x73/0x8b
[  802.005920]  [<ffffffffa007fc96>] ? check_crtc_state+0x7fd/0x844 [i915]
[  802.005924]  [<ffffffff810331da>] ? warn_slowpath_fmt+0x45/0x4a
[  802.005940]  [<ffffffffa00937fa>] ? intel_ddi_get_config+0xd5/0x12b [i915]
[  802.005952]  [<ffffffffa007fc96>] ? check_crtc_state+0x7fd/0x844 [i915]
[  802.005968]  [<ffffffffa008a7de>] ? intel_modeset_check_state+0x359/0x601 [i915]
[  802.005981]  [<ffffffffa008aaa3>] ? intel_set_mode+0x1d/0x27 [i915]
[  802.005993]  [<ffffffffa008b0b1>] ? intel_crtc_set_config+0x604/0x7fe [i915]
[  802.005999]  [<ffffffff81063cc0>] ? print_prefix+0x80/0x88
[  802.006012]  [<ffffffffa000c9c2>] ? drm_mode_set_config_internal+0x44/0xac [drm]
[  802.006017]  [<ffffffffa004875e>] ? drm_fb_helper_set_par+0x55/0x9a [drm_kms_helper]
[  802.006022]  [<ffffffff812ff5bb>] ? fb_set_var+0x246/0x32c
[  802.006026]  [<ffffffff810d569a>] ? kmem_cache_alloc+0x23/0xac
[  802.006031]  [<ffffffff81309451>] ? fbcon_blank+0x71/0x230
[  802.006035]  [<ffffffff810d9467>] ? do_dentry_open+0x172/0x23a
[  802.006039]  [<ffffffff81357f86>] ? do_unblank_screen+0xef/0x169
[  802.006043]  [<ffffffff813503c7>] ? vt_ioctl+0x4b0/0xf8a
[  802.006045]  [<ffffffff810e6f16>] ? path_openat+0x22d/0x5b9
[  802.006048]  [<ffffffff810e74c3>] ? user_path_at_empty+0x54/0x7d
[  802.006052]  [<ffffffff81348be0>] ? tty_ioctl+0x8b5/0x924
[  802.006055]  [<ffffffff810e7572>] ? do_filp_open+0x2d/0x75
[  802.006058]  [<ffffffff810e90e8>] ? do_vfs_ioctl+0x3f1/0x43a
[  802.006061]  [<ffffffff810f0ac3>] ? __fd_install+0x15/0x39
[  802.006064]  [<ffffffff810e917f>] ? SyS_ioctl+0x4e/0x7b
[  802.006068]  [<ffffffff8171c5e2>] ? system_call_fastpath+0x16/0x1b
[  802.006070] ---[ end trace 038a7ab38067b7de ]---
Comment 11 Paulo Zanoni 2014-01-06 20:13:21 UTC
(In reply to comment #8)
> Assigning to Paulo. This *shouldn't* effect pass rate, but I understand that
> is a larger conversation.

I will debug this as soon as HW arrives.

I was really hoping Ville's patch would fix the problem, so I'll start by debugging it.
Comment 12 Paulo Zanoni 2014-01-08 14:01:14 UTC
Hi

Can you please test "drm/i915/bdw: don't try to check IPS state on BDW v2" from http://lists.freedesktop.org/archives/intel-gfx/2014-January/037985.html ?

Thanks,
Paulo
Comment 13 Daniel Vetter 2014-01-08 16:24:34 UTC
commit e59150dcf7e126ebf89afacd372602f328d4d6fc
Author: Jesse Barnes <jbarnes@virtuousgeek.org>
Date:   Tue Jan 7 13:30:45 2014 -0800

    drm/i915/bdw: don't try to check IPS state on BDW v2
Comment 14 lu hua 2014-01-13 02:15:11 UTC
Verified.Fixed.
Comment 15 Elizabeth 2017-10-06 14:41:58 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.